--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=gestion_pret
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestion_pret_bibliotheque
+spring.datasource.username=postgres 
+spring.datasource.password=diary3103 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Stratégie de génération du schéma. 'validate' est parfait pour nous :
+# Il vérifie que les tables de la BDD correspondent bien aux entités Java, sans rien modifier.
+# Autres options : 'create' (détruit et recrée), 'update' (met à jour), 'none' (ne fait rien).
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
